ads remain for upload

--- a/frontend/src/component/Headder/headder.css
+++ b/frontend/src/component/Headder/headder.css
@@ -21,7 +21,7 @@
   color: whitesmoke;
   text-shadow: 100px;
   text-decoration: inherit;
-  font-size: large;
+  font-size: 20px;
   font-weight: bold;
   text-align: center;
 }
