--- a/frontend/src/component/mid/mid.css
+++ b/frontend/src/component/mid/mid.css
@@ -75,7 +75,7 @@
     padding-bottom: 25px;
     text-align: center;
     color: blue;
-    font-size: x-large;
+    font-size: 30px;
     font-stretch:extra-expanded;
     font-weight:bolder ;
 }
